[package]
name = "lambda_blue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator_chip8 = { path = "../emulators/emulator_chip8" }
native-dialog = "0.5.5"
home = "0.5.3"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf"]
